refactor: use formatted()